--- a/pages/index.css
+++ b/pages/index.css
@@ -5,3 +5,8 @@
 @import url(../blocks/header/__lang/header__lang.css);
 @import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/logo/logo.css);
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/lead/__img/lead__img.css);
+@import url(../blocks/lead/__text/lead__text.css);
