--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,10 +1,10 @@
-.header__link {
+.header__lang-link {
   text-decoration: none;
   font-size: 24px;
   line-height: 1.15;
   color: #ffffff;
 }
 
-.header__link:hover {
+.header__lang-link:hover {
   text-decoration: underline;
 }
