--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,7 +1,7 @@
-.header__langs {
-  margin: 0;
+.footer__links {
   padding-left: 0;
-  list-style: none;
+  margin: 0;
   display: flex;
   gap: 18px;
+  list-style: none;
 }
