--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -3,5 +3,5 @@
   background-color: #2A2C2F;
   max-width: 1280px;
   margin: 0 auto;
-  font-family: Inter, sans-serif;
+  font-family: 'Inter', 'Impact', sans-serif;
 }
