Заменя line-height на значения из макета. Форматирование стилей.

--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,6 +1,7 @@
 .footer__copyright {
   margin: 0;
   font-size: 16px;
-  line-height: 1.12;
+  line-height: 1.14;
   font-weight: 400;
+  font-style: normal;
 }
