--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,8 +1,10 @@
 .header__lang-link {
   text-decoration: none;
   font-size: 24px;
-  line-height: 1.15;
-  color: #ffffff;
+  line-height: 1.17;
+  font-weight: 400;
+  font-style: normal;
+  color: #FFFFFF;
 }
 
 .header__lang-link:hover {
