--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding-bottom: 33px;
   font-size: 16px;
-  line-height: 1.6;
+  line-height: 1.63;
   font-weight: 400;
+  font-style: normal;
 }
