--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding-bottom: 40px;
   font-size: 54px;
-  line-height: 1;
+  line-height: 1.07;
   font-weight: 900;
+  font-style: normal;
 }
