--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -2,6 +2,7 @@
   margin: 0 auto;
   max-width: 360px;
   font-size: 18px;
-  line-height: 1.2;
+  line-height: 1.22;
   font-weight: 400;
+  font-style: normal;
 }
