--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -3,6 +3,7 @@
   padding-bottom: 32px;
   max-width: 560px;
   font-size: 72px;
-  line-height: 1.05;
+  line-height: 1.06;
+  font-style: normal;
   font-weight: 900;
 }
