--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,8 +1,9 @@
 .lead__title {
   margin: 0 auto;
   font-size: 96px;
-  line-height: 1;
+  line-height: 1.04;
   font-weight: 900;
+  font-style: normal;
   text-align: center;
   max-width: 720px;
 }
