--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,8 +1,9 @@
 .place__link {
-  color: #ffffff;
+  color: #FFFFFF;
   font-size: 18px;
-  line-height: 1.2;
+  line-height: 1.22;
   font-weight: 400;
+  font-style: normal;
   text-decoration: none;
   border-bottom: 1px solid;
 }
