Реализация адаптивной вёрстки согласно макета. Реализация промежуточных состояний.

--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -11,3 +11,10 @@
   opacity: .8;
   transition: opacity .5s;
 }
+
+@media screen and (max-width: 425px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 1.11;
+  }
+}
