--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -6,3 +6,11 @@
   font-weight: 400;
   font-style: normal;
 }
+
+@media screen and (max-width: 530px) {
+  .cover__subtitle {
+    max-width: 265px;
+    font-size: 14px;
+    line-height: 1.14;
+  }
+}
