--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,3 +7,12 @@
   font-style: normal;
   font-weight: 900;
 }
+
+@media screen and (max-width: 530px) {
+  .cover__title {
+    padding-bottom: 16px;
+    max-width: 255px;
+    font-size: 32px;
+    line-height: 1.09;
+  }
+}
