--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -28,3 +28,28 @@
   cursor: pointer;
   transition: opacity .5s;
 }
+
+@media screen and (max-width: 1024px) {
+  .cover {
+    max-width: 100%;
+    height: 640px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover {
+    height: 480px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .cover {
+    height: 320px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover {
+    height: 200px;
+  }
+}
