--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,3 +5,10 @@
   font-weight: 400;
   font-style: normal;
 }
+
+@media screen and (max-width: 530px) {
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 1;
+  }
+}
