--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -11,3 +11,10 @@
   opacity: .8;
   transition: opacity .5s;
 }
+
+@media screen and (max-width: 530px) {
+  .footer__link {
+    font-size: 24px;
+    line-height: 1;
+  }
+}
