--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -5,3 +5,9 @@
   gap: 18px;
   list-style: none;
 }
+
+@media screen and (max-width: 530px) {
+  .footer__links {
+    flex-direction: column;
+  }
+}
