--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,3 +6,33 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 1024px) {
+  .footer {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .footer {
+    margin: 0 24px;
+    padding-top: 88px;
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 740px) {
+  .footer {
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    padding-top: 64px;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .footer {
+    margin-left: 16px;
+    align-items: flex-start;
+  }
+}
