--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -6,3 +6,11 @@
   font-weight: 900;
   font-style: normal;
 }
+
+@media screen and (max-width: 768px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 1.09;
+    max-width: 87%;
+  }
+}
