--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,3 +3,29 @@
   padding: 92px 0;
   max-width: 984px;
 }
+
+@media screen and (max-width: 1024px) {
+  .intro {
+    margin-left: 39.5px;
+    padding: 88px 0;
+    max-width: 984px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .intro {
+    margin-left: 24px;
+    margin-right: 24px;
+    padding: 88px 0;
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .intro {
+    margin-left: 16px;
+    margin-right: 16px;
+    padding: 64px 0;
+    max-width: 288px;
+  }
+}
