--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,3 +8,29 @@
   text-align: center;
   max-width: 640px;
 }
+
+@media screen and (max-width: 1024px) {
+  .lead__subtitle {
+    padding-top: 32px;
+    padding-bottom: 56px;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .lead__subtitle {
+    max-width: 405px;
+    font-size: 24px;
+    padding-top: 36px;
+    padding-bottom: 40px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .lead__subtitle {
+    max-width: 288px;
+    font-size: 16px;
+    line-height: 1.25;
+    padding-top: 16px;
+    padding-bottom: 40px;
+  }
+}
