--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,3 +7,25 @@
   text-align: center;
   max-width: 720px;
 }
+
+@media screen and (max-width: 700px) {
+  .lead__title {
+    max-width: 540px;
+    font-size: 72px;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .lead__title {
+    max-width: 405px;
+    font-size: 48px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .lead__title {
+    max-width: 288px;
+    font-size: 40px;
+  }
+}
