--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,3 +6,41 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 16px;
 }
+
+@media screen and (max-width: 1024px) {
+  .photo-grid {
+    max-width: 928px;
+    margin-left: 48px;
+    margin-right: 48px;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 14px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    max-width: 720px;
+    margin-left: 24px;
+    margin-right: 24px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
+    padding-bottom: 88px;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .photo-grid {
+    max-width: 490px;
+    margin-left: 16px;
+    margin-right: 16px;
+    grid-template-columns: 1fr;
+    gap: 12px;
+    padding-bottom: 64px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .photo-grid {
+    max-width: 288px;
+  }
+}
