--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -10,3 +10,16 @@
 .place__paragraph:last-child {
   padding-bottom: 0;
 }
+
+@media screen and (max-width: 768px) {
+  .place__paragraph {
+    font-size: 16px;
+    padding-bottom: 25px;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .place__paragraph {
+    margin: 0 16px;
+  }
+}
