--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -5,3 +5,18 @@
   font-weight: 900;
   font-style: normal;
 }
+
+@media screen and (max-width: 768px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 1.1;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .place__title {
+    font-size: 32px;
+    line-height: 1.09;
+    margin-left: 16px;
+  }
+}
