--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,3 +1,10 @@
 .place__website {
   align-self: end;
 }
+
+@media screen and (max-width: 530px) {
+  .place__website {
+    align-self: auto;
+    margin-left: 16px;
+  }
+}
