--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -6,3 +6,25 @@
   gap: 80px;
   flex-direction: column;
 }
+
+
+@media screen and (max-width: 1024px) {
+  .places {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .places {
+    max-width: 720px;
+    padding-bottom: 89px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .places {
+    max-width: 100%;
+    padding-bottom: 66px;
+    gap: 50px;
+  }
+}
