--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,55 +1,30 @@
 .cover {
   margin: 0 auto;
   max-width: 92.5%;
-  height: 740px;
-  background-image: url(../../../images/cover-trains.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-}
-
-.cover::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background: #2A2C2F;
-  opacity: .3;
-}
-
-.cover:hover::before {
-  opacity: .8;
-  cursor: pointer;
-  transition: opacity .5s;
+  
 }
 
 @media screen and (max-width: 1024px) {
   .cover {
     max-width: 100%;
-    height: 640px;
+    min-height: 640px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover {
-    height: 480px;
+    min-height: 480px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .cover {
-    height: 320px;
+    min-height: 320px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .cover {
-    height: 200px;
+    min-height: 200px;
   }
 }
