--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -14,6 +14,12 @@
   }
 }
 
+@media screen and (max-width: 960px) {
+  .places {
+    margin: 0 16px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .places {
     max-width: 720px;
