--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -5,4 +5,10 @@
   margin: 0 auto;
   font-family: 'Inter', 'Impact', sans-serif;
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
 }
