--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -3,7 +3,7 @@
   background-color: #2A2C2F;
   max-width: 1280px;
   margin: 0 auto;
-  font-family: 'Inter', 'Impact', sans-serif;
+  font-family: 'Inter', 'Arial', sans-serif;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
