--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -15,7 +15,8 @@
 
 @media screen and (max-width: 960px) {
   .footer {
-    margin: 0 24px;
+    margin-left: 24px;
+    margin-right: 24px;
     padding-top: 88px;
     max-width: 720px;
   }
@@ -33,6 +34,7 @@
 @media screen and (max-width: 530px) {
   .footer {
     margin-left: 16px;
+    gap: 48px;
     align-items: flex-start;
   }
 }
