--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -4,6 +4,11 @@
   background-image: url(../../../images/header-logo.svg);
 }
 
+.header__logo:hover {
+  opacity: .8;
+  transition: opacity .5s;
+}
+
 @media screen and (max-width: 425px) {
   .header__logo {
     width: 142px;
