--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,8 +1,16 @@
 .intro__list {
   list-style-type: none;
   padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
   font-size: 12px;
   line-height: 1.5;
   font-weight: 700;
   font-style: normal;
+}
+
+@media screen and (max-width: 320px) {
+  .intro__list {
+    letter-spacing: -0.1px;
+  }
 }
