--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -18,8 +18,9 @@
   }
 }
 
-@media screen and (max-width: 530px) {
+@media screen and (max-width: 320px) {
   .place__paragraph {
-    margin: 0 16px;
+    margin-left: 16px;
+    margin-right: 16px;
   }
 }
