--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -11,12 +11,22 @@
     font-size: 42px;
     line-height: 1.1;
   }
+
+  .place__title:first-child {
+    padding-right: 10px;
+  }
 }
 
 @media screen and (max-width: 530px) {
   .place__title {
     font-size: 32px;
     line-height: 1.09;
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__title {
     margin-left: 16px;
   }
 }
