--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -5,6 +5,12 @@
 @media screen and (max-width: 530px) {
   .place__website {
     align-self: auto;
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__website {
     margin-left: 16px;
   }
 }
