--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -11,12 +11,15 @@
 @media screen and (max-width: 1024px) {
   .places {
     max-width: 928px;
+    margin-left: 48px;
+    margin-right: 48px;
   }
 }
 
 @media screen and (max-width: 960px) {
   .places {
-    margin: 0 16px;
+    margin-left: 16px;
+    margin-right: 16px;
   }
 }
 
@@ -32,5 +35,7 @@
     max-width: 100%;
     padding-bottom: 66px;
     gap: 50px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
